[gd_scene load_steps=2 format=3 uid="uid://bql45urpt22ht"]

[ext_resource type="Script" path="res://DEMO/Scenes/MixScene.gd" id="1_242ia"]

[node name="MixScene" type="Node2D"]
script = ExtResource("1_242ia")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tittle" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.0
offset_right = 39.0
offset_bottom = 26.0
grow_horizontal = 2
text = "MixNodes"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
layout_mode = 2

[node name="Intro" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Intro"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Loop1" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Loop1"

[node name="Loop2" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ParallelTrack"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Layer1" type="CheckButton" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Layer1"

[node name="Layer2" type="CheckButton" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Layer2"

[node name="Layer3" type="CheckButton" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Layer3"

[node name="Outro" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Outro"

[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Intro" to="." method="_on_intro_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer/Loop1" to="." method="_on_loop_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer/Loop2" to="." method="_on_loop_2_pressed"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer2/Layer1" to="." method="_on_layer_1_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer2/Layer2" to="." method="_on_layer_2_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer2/Layer3" to="." method="_on_layer_3_toggled"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Outro" to="." method="_on_outro_pressed"]
